--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
                 />
                 <nav class="menu">
                     <div class="menu__list">
-                        <button class="menu__item menu__item_active">
-                            <img src="/images/dumbbell.svg" alt="Гантель" />
+                        <!-- <button
+                            class="menu__item menu__item_active"
+                            menu-habbit-id="1"
+                        >
+                            <img src="/images/sport.svg" alt="Спорт" />
                         </button>
                         <button class="menu__item">
                             <img src="/images/water.svg" alt="Вода" />
                         </button>
                         <button class="menu__item">
                             <img src="/images/food.svg" alt="Еда" />
-                        </button>
+                        </button> -->
                     </div>
                     <button class="menu__add">
                         <img src="/images/add.svg" alt="Добавить привычку" />
